--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,7 +41,7 @@
                         <a routerLink="dashboard/hrm/employee-attendance">Employee Attendance</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee-salary">Employee Salary</a>
+                        <a routerLink="dashboard/hrm/employee-certifaication">Employee Certification</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-project">Employee Project</a>
