--- a/src/app/modules/hrm/employee-certification/employee-certification-list/employee-certification-list.component.scss
+++ b/src/app/modules/hrm/employee-certification/employee-certification-list/employee-certification-list.component.scss
@@ -5,3 +5,9 @@
   .table-operations > button {
     margin-right: 8px;
   }
+  .center {
+  display: flex;
+  max-width: 500px;
+  margin: auto;
+  padding: 10px;
+  }
