--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
                         <a routerLink="dashboard/hrm/employee-certifaication">Employee Certification</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee-project">Employee Project</a>
+                        <a routerLink="dashboard/hrm/employee-deactivate">Employee Deactivate</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-leave">Employee Leave</a>
