--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
                         <a routerLink="dashboard/hrm/employee-deactivate">Employee Deactivate</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee-leave">Employee Leave</a>
+                        <a routerLink="dashboard/hrm/employee-dependent">Employee Dependent</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-training">Employee Training</a>
