--- a/src/app/modules/hrm/employee-education/employee-education-list/employee-education-list.component.html
+++ b/src/app/modules/hrm/employee-education/employee-education-list/employee-education-list.component.html
@@ -1,1 +1,52 @@
-<p>employee-education-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Employee Education</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>EmployeeEducationId</th>
+            <th>EmployeeName</th>
+            <th>Institute</th>
+            <th>StartDate</th>
+            <th>CompletedOn</th>
+            <th>EducationId</th>
+            <th>Employee Id</th>
+            <th>Company Id</th>
+            <th>User Id</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of _employeeEducationList;index as i">
+            <td>{{ i+1 }}</td>
+            <td>{{ data.employeeEducationId }}</td>
+            <td>{{ data.employeeName }}</td>
+            <td>{{ data.institute }}</td>
+            <td>{{ data.startDate | date:'d/M/y'}}</td>
+            <td>{{ data.completedOn | date:'d/M/y'}}</td>
+            <td>{{ data.educationId }}</td>
+            <td>{{ data.employeeId }}</td>
+            <td>{{ data.companyId }}</td>
+            <td>{{ data.userId }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/',data.employeeEducationId]"><i
+                            nz-icon nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"
+                        (click)="deleteEmployeeEducation(data.employeeEducationId)"><i nz-icon nzType="delete"
+                            nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
