--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-education">Employee Education</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/emergency-contact">Emergency Contact</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
