--- a/src/app/modules/hrm/employee-emergency-contact/employee-emergency-contact-list/employee-emergency-contact-list.component.html
+++ b/src/app/modules/hrm/employee-emergency-contact/employee-emergency-contact-list/employee-emergency-contact-list.component.html
@@ -1,1 +1,54 @@
-<p>employee-emergency-contact-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Employee Contact</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>Employee Contact Id</th>
+            <th>Employee Name</th>
+            <th>Name</th>
+            <th>Relationship</th>
+            <th>Home Phone</th>
+            <th>Work Phone</th>
+            <th>Mobile Phone</th>
+            <th>Employee Id</th>
+            <th>Company Id</th>
+            <th>User Id</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of _employeeContactList;index as i">
+            <td>{{ i+1 }}</td>
+            <td>{{ data.employeeContactId }}</td>
+            <td>{{ data.employeeName }}</td>
+            <td>{{ data.name }}</td>
+            <td>{{ data.relationship }}</td>
+            <td>{{ data.homePhone }}</td>
+            <td>{{ data.workPhone }}</td>
+            <td>{{ data.mobilePhone }}</td>
+            <td>{{ data.employeeId }}</td>
+            <td>{{ data.companyId }}</td>
+            <td>{{ data.userId }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/',data.employeeContactId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"
+                        (click)="deleteEmployeeEmergencyContact(data.employeeContactId)"><i nz-icon nzType="delete"
+                            nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
