--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,6 +58,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/hrm/employee-expense">Employee-Expense</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/employee-language">Employee-Language</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzOpen nzTitle="Payroll" nzIcon="ungroup" nzTheme="outline">
