--- a/src/app/modules/hrm/employee-language/employee-language-list/employee-language-list.component.html
+++ b/src/app/modules/hrm/employee-language/employee-language-list/employee-language-list.component.html
@@ -1,1 +1,56 @@
-<p>employee-language-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Employee Language</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+</div>
+<div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+</div>
+<nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+        <tr>
+            <th>#</th>
+            <th>EmployeeLanguageId</th>
+            <th>Employee Name</th>
+            <th>Language</th>
+            <th>Reading</th>
+            <th>Speaking</th>
+            <th>Writing</th>
+            <th>Listening</th>
+            <th>LanguageId</th>
+            <th>Employee Id</th>
+            <th>Company Id</th>
+            <th>User Id</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let data of _employeeLanguageList;index as i">
+            <td>{{ i+1 }}</td>
+            <td>{{ data.employeeLanguageId }}</td>
+            <td>{{ data.employeeName }}</td>
+            <td>{{ data.language}}</td>
+            <td>{{ data.reading }}</td>
+            <td>{{ data.speaking }}</td>
+            <td>{{ data.writing }}</td>
+            <td>{{ data.listening }}</td>
+            <td>{{ data.languageId }}</td>
+            <td>{{ data.employeeId }}</td>
+            <td>{{ data.companyId }}</td>
+            <td>{{ data.userId }}</td>
+            <td>
+                <nz-button-group>
+                    <button nz-button nzType="primary" [routerLink]="['update/',data.employeeLanguageId]"><i nz-icon
+                            nzType="edit" nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"
+                        (click)="deleteEmployeeLanguage(data.employeeLanguageId)"><i nz-icon nzType="delete"
+                            nzTheme="outline"></i></button>
+                    <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+                </nz-button-group>
+            </td>
+        </tr>
+    </tbody>
+</nz-table>
