--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,10 +56,13 @@
                         <a routerLink="dashboard/hrm/emergency-contact">Emergency Contact</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee-expense">Employee-Expense</a>
+                        <a routerLink="dashboard/hrm/employee-expense">Employee Expense</a>
                     </li>
                     <li nz-menu-item nzMatchRouter>
-                        <a routerLink="dashboard/hrm/employee-language">Employee-Language</a>
+                        <a routerLink="dashboard/hrm/employee-language">Employee Language</a>
+                    </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/hrm/employee-leave">Employee Leave</a>
                     </li>
                 </ul>
             </li>
