--- a/src/app/modules/hrm/employee-leave/create-employee-leave/create-employee-leave.component.html
+++ b/src/app/modules/hrm/employee-leave/create-employee-leave/create-employee-leave.component.html
@@ -1,44 +1,62 @@
 <nz-page-header-title>Leave</nz-page-header-title>
-<form nz-form [formGroup]="leaveForm" (ngSubmit) = "onSubmit()">
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>Employee Id</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Month" nzRequired>Month</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="Month" id="Month" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="StartDate" nzRequired>Start Date</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="StartDate" id="StartDate" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EndDate" nzRequired>End Date</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="EndDate" id="EndDate"/>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="NoOfDays" nzRequired>No Of Days</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="NoOfDays" id="NoOfDays"/>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeavePeriod" nzRequired>Leave Period</nz-form-label>
-      <nz-form-control [nzSm]="14" [nzXs]="24" >
-        <input nz-input type="text" formControlName="LeavePeriod" id="LeavePeriod"/>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item nz-row class="register-area">
-      <nz-form-control [nzSpan]="14" [nzOffset]="6">
-        <button nz-button nzType="primary">Save</button>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
+<form nz-form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeName" nzRequired>EmployeeName</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="EmployeeName" id="EmployeeName" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveType" nzRequired>Leave Type</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="LeaveType" id="LeaveType" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveStartDate" nzRequired>Leave StartDate</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <nz-date-picker type="text" formControlName="LeaveStartDate"></nz-date-picker>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveEndDate" nzRequired>Leave EndDate</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <nz-date-picker type="text" formControlName="LeaveEndDate"></nz-date-picker>
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Reason" nzRequired>Reason</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="Reason" id="Reason" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Attachment" nzRequired>Attachment</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="Attachment" id="Attachment" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="Status" nzRequired>Status</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="Status" id="Status" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>EmployeeId</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item>
+    <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveTypeId" nzRequired>LeaveTypeId</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24">
+      <input nz-input type="text" formControlName="LeaveTypeId" id="LeaveTypeId" />
+    </nz-form-control>
+  </nz-form-item>
+  <nz-form-item nz-row class="register-area">
+    <nz-form-control [nzSpan]="14" [nzOffset]="6">
+      <button nz-button nzType="primary">Save</button>
+    </nz-form-control>
+  </nz-form-item>
+</form>
