--- a/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.html
+++ b/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.html
@@ -4,37 +4,50 @@
   <button nz-button>Clear filters</button>
   <button nz-button>Clear filters and sorters</button>
 </div>
+<div class="center">
+  <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+      [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+  </circle-progress>
+</div>
 <nz-table #filterTable nzTableLayout="fixed">
   <thead>
     <tr>
-      <th>LeaveId</th>
+      <th>#</th>
+      <th>EmployeeLeaveId</th>
+      <th>EmployeeName</th>
+      <th>LeaveType</th>
+      <th>LeaveStartDate</th>
+      <th>LeaveEndDate</th>
+      <th>Reason</th>
+      <th>Attachment</th>
+      <th>Status</th>
       <th>EmployeeId</th>
-      <th>Month</th>
-      <th>StartDate</th>
-      <th>EndDate</th>
-      <th>NoOfDays</th>
-      <th>LeavePeriod</th>
+      <th>LeaveTypeId</th>
       <th>CompanyId</th>
       <th>UserId</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let data of _leaveList">
-      <td>{{ data.leaveId }}</td>
+    <tr *ngFor="let data of _leaveList; index as i">
+      <td>{{ i+1 }}</td>
+      <td>{{ data.employeeLeaveId }}</td>
+      <td>{{ data.employeeName }}</td>
+      <td>{{ data.leaveType }}</td>
+      <td>{{ data.leaveStartDate | date:'d/M/y' }}</td>
+      <td>{{ data.leaveEndDate | date:'d/M/y' }}</td>
+      <td>{{ data.reason }}</td>
+      <td>{{ data.attachment }}</td>
+      <td>{{ data.status }}</td>
       <td>{{ data.employeeId }}</td>
-      <td>{{ data.month }}</td>
-      <td>{{ data.startDate }}</td>
-      <td>{{ data.endDate }}</td>
-      <td>{{ data.noOfDays }}</td>
-      <td>{{ data.leavePeriod }}</td>
+      <td>{{ data.leaveTypeId }}</td>
       <td>{{ data.companyId }}</td>
       <td>{{ data.userId }}</td>
       <td>
         <nz-button-group>
-          <button nz-button nzType="primary" [routerLink]="['update/',data.leaveId]"><i nz-icon nzType="edit"
+          <button nz-button nzType="primary" [routerLink]="['update/',data.employeeLeaveId]"><i nz-icon nzType="edit"
               nzTheme="outline"></i></button>
-          <button nz-button nzType="primary" (click)="deleteLeave(data.leaveId)"><i nz-icon nzType="delete"
+          <button nz-button nzType="primary" (click)="deleteLeave(data.employeeLeaveId)"><i nz-icon nzType="delete"
               nzTheme="outline"></i></button>
           <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
         </nz-button-group>
