--- a/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.scss
+++ b/src/app/modules/hrm/employee-leave/employee-leave-list/employee-leave-list.component.scss
@@ -1,7 +1,13 @@
 .table-operations {
-    margin-bottom: 16px;
-  }
+  margin-bottom: 16px;
+}
 
-  .table-operations > button {
-    margin-right: 8px;
-  }
+.table-operations > button {
+  margin-right: 8px;
+}
+.center {
+display: flex;
+max-width: 500px;
+margin: auto;
+padding: 10px;
+}
