--- a/src/app/modules/shared/holidays/holiday-list/holiday-list.component.html
+++ b/src/app/modules/shared/holidays/holiday-list/holiday-list.component.html
@@ -1,1 +1,52 @@
 <p>holiday-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Create Holiday</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>HolidaysId</th>
+        <th>Name</th>
+        <th>Date</th>
+        <th>Status</th>
+        <th>Country</th>
+        <th>WorkWeekId</th>
+        <th>EmployeeId</th>
+        <th>CompanyId</th>
+        <th>UserId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _holidayList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.holidaysId }}</td>
+        <td>{{ data.name }}</td>
+        <td>{{ data.date | date:'d/M/y' }}</td>
+        <td>{{ data.status}}</td>
+        <td>{{ data.country}}</td>
+        <td>{{ data.workWeekId}}</td>
+        <td>{{ data.employeeId  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>{{ data.userId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.holidaysId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteHoliday(data.holidaysId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
