--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/holiday">Holiday</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/job-title">Job Title</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
