--- a/src/app/modules/shared/job-title/job-title-list/job-title-list.component.html
+++ b/src/app/modules/shared/job-title/job-title-list/job-title-list.component.html
@@ -1,1 +1,45 @@
-<p>job-title-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Job Title</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>JobTitleId</th>
+        <th>JobTitleCode</th>
+        <th>JobTitle1</th>
+        <th>Description</th>
+        <th>Specification</th>
+        <th>CompanyId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _jobTitleList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.jobTitleId }}</td>
+        <td>{{ data.jobTitleCode }}</td>
+        <td>{{ data.jobTitle1 }}</td>
+        <td>{{ data.description}}</td>
+        <td>{{ data.specification  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.jobTitleId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteJobTitle(data.jobTitleId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
