--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/language">Language</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/leave-type">Leave Type</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
