--- a/src/app/modules/shared/leave-type/update-leave-type/update-leave-type.component.html
+++ b/src/app/modules/shared/leave-type/update-leave-type/update-leave-type.component.html
@@ -1,1 +1,38 @@
-<p>update-leave-type works!</p>
+<nz-page-header-title> Employee Leave</nz-page-header-title>
+<form nz-form [formGroup]="leaveTypeForm" (ngSubmit)="onUpdate()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveName" nzRequired>LeaveName</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="LeaveName" id="LeaveName" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveEnabled" nzRequired>Leave Enabled</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="LeaveEnabled" id="LeaveEnabled" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveForward" nzRequired>Leave Forward</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="LeaveForward" id="LeaveForward" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeavePerYear" nzRequired>LeavePerYear</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="LeavePerYear" id="LeavePerYear" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="LeaveGroup" nzRequired>LeaveGroup</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="LeaveGroup" id="LeaveGroup" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
