--- a/src/app/modules/shared/over-time/over-time-list/over-time-list.component.html
+++ b/src/app/modules/shared/over-time/over-time-list/over-time-list.component.html
@@ -1,1 +1,53 @@
-<p>over-time-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Over Time</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>OverTimeId</th>
+        <th>Category</th>
+        <th>OverTimeName</th>
+        <th>StartTime</th>
+        <th>EndTime</th>
+        <th>Project</th>
+        <th>Notes</th>
+        <th>EmployeeId</th>
+        <th>UserId</th>
+        <th>CompanyId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _overTimeList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.overTimeId }}</td>
+        <td>{{ data.category }}</td>
+        <td>{{ data.overTimeName }}</td>
+        <td>{{ data.startTime | date:'d/M/y'}}</td>
+        <td>{{ data.endTime | date:'d/M/y'}}</td>
+        <td>{{ data.project  }}</td>
+        <td>{{ data.notes  }}</td>
+        <td>{{ data.employeeId  }}</td>
+        <td>{{ data.userId  }}</td>
+        <td>{{ data.companyId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.overTimeId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deleteOverTime(data.overTimeId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
