--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/over-time">Over Time</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/paygrade">Paygrade</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
