--- a/src/app/modules/shared/paygrade/update-paygrade/update-paygrade.component.html
+++ b/src/app/modules/shared/paygrade/update-paygrade/update-paygrade.component.html
@@ -15,7 +15,7 @@
     <nz-form-item>
         <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="MaxSalary" nzRequired>Max Salary</nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24">
-            <nz-date-picker type="text" formControlName="MaxSalary"></nz-date-picker>
+            <input nz-input type="text" formControlName="MaxSalary" id="MaxSalary" />
         </nz-form-control>
     </nz-form-item>
     <nz-form-item nz-row class="register-area">
