--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,6 +45,9 @@
                     <li nz-menu-item nzMatchRouter>
                         <a routerLink="dashboard/settings/paygrade">Paygrade</a>
                     </li>
+                    <li nz-menu-item nzMatchRouter>
+                        <a routerLink="dashboard/settings/payment-method">Payment Method</a>
+                    </li>
                 </ul>
             </li>
             <li nz-submenu nzTitle="HRM" nzIcon="appstore" nzTheme="outline">
