--- a/src/app/modules/shared/payment-method/create-payment-method/create-payment-method.component.html
+++ b/src/app/modules/shared/payment-method/create-payment-method/create-payment-method.component.html
@@ -1,1 +1,20 @@
-<p>create-payment-method works!</p>
+<nz-page-header-title> Payment Method</nz-page-header-title>
+<form nz-form [formGroup]="paymentForm" (ngSubmit)="onSubmit()">
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="PaymentMethodName" nzRequired>PaymentMethodName</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="PaymentMethodName" id="PaymentMethodName" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+        <nz-form-label [nzSm]="6" [nzXs]="24" nzFor="EmployeeId" nzRequired>EmployeeId</nz-form-label>
+        <nz-form-control [nzSm]="14" [nzXs]="24">
+            <input nz-input type="text" formControlName="EmployeeId" id="EmployeeId" />
+        </nz-form-control>
+    </nz-form-item>
+    <nz-form-item nz-row class="register-area">
+        <nz-form-control [nzSpan]="14" [nzOffset]="6">
+            <button nz-button nzType="primary">Save</button>
+        </nz-form-control>
+    </nz-form-item>
+</form>
