--- a/src/app/modules/shared/payment-method/payment-method-list/payment-method-list.component.html
+++ b/src/app/modules/shared/payment-method/payment-method-list/payment-method-list.component.html
@@ -1,1 +1,43 @@
-<p>payment-method-list works!</p>
+<div class="table-operations">
+    <button nz-button [routerLink]="['create']">Payment Method</button>
+    <button nz-button>Sort age</button>
+    <button nz-button>Clear filters</button>
+    <button nz-button>Clear filters and sorters</button>
+  </div>
+  <div class="center">
+    <circle-progress *ngIf="showSpinner" [percent]="100" [radius]="100" [outerStrokeWidth]="16" [innerStrokeWidth]="8"
+        [outerStrokeColor]="'#78C000'" [innerStrokeColor]="'#C7E596'" [animation]="true" [animationDuration]="10000">
+    </circle-progress>
+  </div>
+  <nz-table #filterTable nzTableLayout="fixed">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>PaymentMethodId</th>
+        <th>PaymentMethodName</th>
+        <th>EmployeeId</th>
+        <th>UserId</th>
+        <th>CompanyId</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let data of _paymentList; index as i">
+        <td>{{ i+1 }}</td>
+        <td>{{ data.paymentMethodId }}</td>
+        <td>{{ data.paymentMethodName }}</td>
+        <td>{{ data.employeeId }}</td>
+        <td>{{ data.userId}}</td>
+        <td>{{ data.companyId }}</td>
+        <td>
+          <nz-button-group>
+            <button nz-button nzType="primary" [routerLink]="['update/',data.paymentMethodId]"><i nz-icon nzType="edit"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary" (click)="deletePaymentMethod(data.paymentMethodId)"><i nz-icon nzType="delete"
+                nzTheme="outline"></i></button>
+            <button nz-button nzType="primary"><i nz-icon nzType="fund-view" nzTheme="outline"></i></button>
+          </nz-button-group>
+        </td>
+      </tr>
+    </tbody>
+  </nz-table>
